# sismatic

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  flake.nix  mkdocs.yml  pre-push-guards.txt  pyproject.toml  release-plz.toml  rust-toolchain.toml
.github/workflows/: pipeline.yml  publish-pypi.yml  release-plz.yml
crates/sismatic-api-types/: Cargo.toml
crates/sismatic-api-types/src/: command.rs  device.rs  error.rs  lib.rs  reading.rs  value.rs
crates/sismatic-cli/: Cargo.toml
crates/sismatic-cli/src/: main.rs
crates/sismatic-core/: CHANGELOG.md  Cargo.toml
crates/sismatic-core/src/: devices.rs  lib.rs  protocol.rs
crates/sismatic-core/src/devices/: config.rs  config.rs.orig  connector.rs  controller.rs  device.rs  group.rs  keepalive.rs  registry.rs  sis_keepalive.rs
crates/sismatic-core/src/devices/connector/: fake.rs
crates/sismatic-core/src/devices/transport/: fake.rs  ssh.rs
crates/sismatic-core/src/protocol/: control_chars.rs  states.rs
crates/sismatic-core/src/protocol/instructions/: commands.rs  query.rs  register.rs
crates/sismatic-core/tests/: real_ssh.rs  simulated_ssh.rs
crates/sismatic-python/: Cargo.toml  README.md
crates/sismatic-python-sdk/: Cargo.toml  DEVELOP.md  README.md
crates/sismatic-python-sdk/docs/examples/: devices.toml  devices.yaml  from_file_toml.py  from_file_yaml.py  self_contained.py  test_script.py
crates/sismatic-python-sdk/python/sismatic/: __init__.pyi
crates/sismatic-python-sdk/src/: python_binding.rs  stub.rs
crates/sismatic-python/docs/examples/: test_script.py
crates/sismatic-python/python/sismatic/: __init__.pyi
crates/sismatic-python/src/: lib.rs  python_binding.rs  stub.rs
crates/sismatic-sync/: Cargo.toml
crates/sismatic-sync/src/: dto.rs  lib.rs
crates/sismatic-web/backend/: Cargo.toml
crates/sismatic-web/backend/src/: main.rs
crates/sismatic-web/src/: main.rs
docs/: index.md  reference.md
python/sismatic/: __init__.py
src/: devices.rs  lib.rs  protocol.rs  python_binding.rs  stub.rs
src/devices/: config.rs  controller.rs  device.rs  registry.rs  transport.rs
src/devices/transport/: fake.rs  ssh.rs
src/protocol/: instructions.rs  payload_helpers.rs  states.rs
src/protocol/instructions/: catalog.rs  commands.rs  query.rs  register.rs
src/recorder/protocol/instructions/: register.rs
