[package]
name = "sismatic"
version = "0.1.1"
edition = "2024"
description = "Blocking Python facade for driving Extron SIS devices over SSH"
license = "ECL-2.0"

[lib]
# `cdylib` for the Python extension module, `rlib` so the crate stays usable as
# a normal Rust dependency and the test/integration binaries can link it.
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
# control = "1.0.0"
dashmap = "6.2.1"
# protocol = "3.4.0"
# `abi3-py38` builds against CPython's stable ABI, so one wheel covers 3.8+
# instead of one wheel per interpreter version.
pyo3 = { version = "0.29.0", optional = true, features = [
  "extension-module",
  "abi3-py38",
] }
russh = { version = "0.60.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
toml = "0.8"
winnow = "1.0.3"

[features]
# The blocking Python facade. It drives real hardware, so it pulls in `ssh`.
python = ["dep:pyo3", "ssh"]
# Real SSH transport (russh). Heavy native dep, so the pure layers and
# `cargo test` stay light unless this is enabled.
ssh = ["dep:russh", "tokio/net", "tokio/io-util", "tokio/rt-multi-thread"]
# Exposes FakeTransport (and other test doubles) to out-of-crate integration tests.
testing = []
