[workspace]
resolver = "2"
members = [
  "crates/sismatic-core",
  "crates/sismatic-python",
  "crates/sismatic-cli",
  "crates/sismatic-web",
]

# Shared across every member so a version/edition/license bump happens once.
[workspace.package]
version = "0.1.14"
edition = "2024"
license = "ECL-2.0"

# Single source of truth for dependency versions. Members opt in with
# `foo.workspace = true` and add only the extra features they need, so e.g. the
# web tree never leaks into the wheel build and pyo3 never leaks into the CLI.
[workspace.dependencies]
# Internal
sismatic-core = { path = "crates/sismatic-core" }

# Shared third-party
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
dashmap = "6.2.1"
# `abi3-py39` builds against CPython's stable ABI, so one wheel covers 3.9+
# instead of one wheel per interpreter version. (3.9 is the floor because the
# Python facade takes weak references to `Sis`, which `abi3` only supports from
# 3.9 on; 3.8 has been EOL since October 2024.)
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py39"] }
# Bridges Rust's `log` output (russh emits the SSH handshake + auth negotiation
# here) into Python's `logging`, so callers can debug connection failures with
# `logging.basicConfig(level=logging.DEBUG)`. 0.13.4 is the first release whose
# pyo3 range (`>=0.26, <0.30`) covers our pyo3 0.29.
pyo3-log = "0.13.4"
russh = "0.60.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1" }
toml = "0.8"
winnow = "1.0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
