[package]
name = "sismatic-core"
description = "SIS protocol model and SSH device layer for Extron devices"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
russh = { workspace = true, optional = true }
serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
# Config-file deserializers, each optional and gated by a same-named feature
# below. The library is format-agnostic by default; a consumer opts into one.
toml = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde-saphyr = { workspace = true, optional = true }
winnow.workspace = true
tracing.workspace = true
uuid.workspace = true

[features]
# Real SSH transport (russh). Heavy native dep, so the pure layers and
# `cargo test` stay light unless this is enabled.
ssh = ["dep:russh", "tokio/net", "tokio/io-util", "tokio/rt-multi-thread"]
# Exposes FakeTransport (and other test doubles) to out-of-crate integration tests.
testing = []
# Opt-in config-file formats. Enable one (or more) for a ready-made loader
# (`config::from_toml_str` and friends, plus extension-dispatching `config::load`);
# enable none to keep the crate format-free and call `resolve_config` yourself.
toml = ["dep:toml"]
json = ["dep:serde_json"]
yaml = ["dep:serde-saphyr"]

[dev-dependencies]
tracing-bunyan-formatter.workspace = true
tracing-subscriber.workspace = true
