[package]
name = "sismatic-python-sdk"
description = "Blocking Python facade for driving Extron SIS devices over SSH"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# The maturin/pyo3 module must be named `sismatic` (it becomes
# `sismatic/sismatic.abi3.so`), so pin the lib name independently of the
# `sismatic-python` package name.
name = "sismatic"
# `cdylib` for the Python extension module, `rlib` so `gen_stub` and the stub
# freshness test can link the crate as a normal Rust library.
crate-type = ["cdylib", "rlib"]

[dependencies]
sismatic-core = { workspace = true }
# `abi3-py39` builds against CPython's stable ABI, so one wheel covers 3.9+
# instead of one wheel per interpreter version.
pyo3 = { workspace = true, optional = true }
# Routes russh's `log` output (SSH handshake + auth negotiation) to Python's
# `logging` so connection failures can be debugged from the Python side.
pyo3-log = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }

[features]
# The blocking Python facade. It drives real hardware, so it pulls in core's
# `ssh` transport and a tokio runtime to block on. `dep:pyo3` gates the compiled
# extension module; without this feature the crate is just the pure stub layer.
python = [
  "dep:pyo3",
  "dep:pyo3-log",
  "dep:tokio",
  "sismatic-core/ssh",
  "sismatic-core/toml",
  "sismatic-core/json",
  "sismatic-core/yaml",
]
