[package]
name = "sismatic-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# The two subgraphs `sync` is the intended intersection of (design note §4):
# the device model (source of `Value`) and the wire contract (target DTOs). The
# `core::Value -> ReadingValue` translation lives here because this is the one
# crate already allowed to see both. Only the pure `protocol` layer is needed,
# so no `ssh` feature — no tokio/russh in the conversion's dependency cone.
sismatic-core.workspace = true
sismatic-api-types.workspace = true
