[package]
name = "sismatic-web"
description = "HTTP server exposing Extron SIS device control over SSH"
version.workspace = true
edition.workspace = true
license.workspace = true
# Application binary, not a library — never published to crates.io.
publish = false

[[bin]]
name = "sismatic-web"
path = "src/main.rs"

[dependencies]
sismatic-core = { workspace = true, features = ["ssh", "toml", "json", "yaml"] }
anyhow.workspace = true
axum.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
